added footer with acknowledgements

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,4 +35,8 @@
   <body>
     <%= yield %>
   </body>
+  <footer>
+    <div class='little-text'>
+      Images Graciously Provided by <a href="http://www.openlibrary.org">The Open Library Project</a> 
+  </footer>
 </html>
