refactored method to access user trades and send to view

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,6 +37,9 @@
   </body>
   <footer>
     <div class='little-text'>
+    </br >
+    <hr>
       Images Graciously Provided by <a href="http://www.openlibrary.org">The Open Library Project</a> 
+    </div>
   </footer>
 </html>
