cleaned up/added README

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
     <div class='little-text'>
     </br >
     <hr>
-      Images Graciously Provided by <a href="http://www.openlibrary.org">The Open Library Project</a> 
+      Images Provided by <a href="http://www.openlibrary.org">The Open Library Project</a> 
     </div>
   </footer>
 </html>
