--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -3,9 +3,12 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .book-listing {
-  padding: 20px;
-  color: SlateGray;
-  background-color: SkyBlue;
+  padding: 10px 50px 100px 30px;
+  color: DarkSlateGray;
+  background-color: #73CEF1;
+  font-family: "Arial", sans-serif;
+  border-color: SlateGray;
+  border: 5px;
 }
 
 .book-listing img {
