--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -34,7 +34,7 @@
 
       <p>Book Owner Email: <%= @book.user.email %></p>
 
-      <p>Owner's Current Rating: <%= @book.user.user_rating %> </p>
+      <p>Owner's Current Rating: <%= @book.user.rating %> </p>
 
     <% end %>  
 
