--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,8 @@
 @import "bootstrap";
 /* Some Style from the Bootstrap Default Theme */
 
+/*
+
 body {
   padding-top: 70px;
   padding-bottom: 50px;
@@ -111,7 +113,7 @@ img[src=""] {
 }
 
 
-
+*/
 
 
 
