--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -2,6 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+
+/*
 .book-listing {
   padding: 10px 50px 100px 30px;
   color: DarkSlateGray;
@@ -14,3 +16,5 @@
 .book-listing img {
   margin: 30px 10px 10px 20px;
 }
+
+*/
