--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,7 +19,34 @@
   <div class="field">
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div></br>
+  </div>
+
+  <hr>
+
+  <div class="field">
+    <%= f.label :real_name %><br />
+    <%= f.email_field :real_name, autofocus: true %>
+  </div>
+
+  <div class="field">
+    <%= f.label :street %><br />
+    <%= f.email_field :street, autofocus: true %>
+  </div>
+
+  <div class="field">
+    <%= f.label :city %><br />
+    <%= f.email_field :city, autofocus: true %>
+  </div>
+
+  <div class="field">
+    <%= f.label :state %><br />
+    <%= f.email_field :state, autofocus: true %>
+  </div>    
+
+  <div class="field">
+    <%= f.label :zipcode %><br />
+    <%= f.email_field :zipcode, autofocus: true %>
+  </div><br>
 
   <div class="actions">
     <%= f.submit "Sign up" %>
@@ -27,5 +54,3 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
-
-
