--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -25,30 +25,30 @@
 
   <div class="field">
     <%= f.label :real_name %><br />
-    <%= f.email_field :real_name, autofocus: true %>
+    <%= f.text_field :real_name, autofocus: true %>
   </div>
 
   <div class="field">
     <%= f.label :street %><br />
-    <%= f.email_field :street, autofocus: true %>
+    <%= f.text_field :street, autofocus: true %>
   </div>
 
   <div class="field">
     <%= f.label :city %><br />
-    <%= f.email_field :city, autofocus: true %>
+    <%= f.text_field :city, autofocus: true %>
   </div>
 
   <div class="field">
     <%= f.label :state %><br />
-    <%= f.email_field :state, autofocus: true %>
+    <%= f.text_field :state, autofocus: true %>
   </div>    
 
   <div class="field">
     <%= f.label :zipcode %><br />
-    <%= f.email_field :zipcode, autofocus: true %>
+    <%= f.text_field :zipcode, autofocus: true %>
   </div><br>
 
-  <div class="actions">
+  <div class="actions" class: 'btn btn-primary'>
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
