tried adding user creation to devise registration

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -33,7 +33,7 @@
       <%= f.label :role %><br />
 
     <%= f.select(:role, User.roles.keys.map { |role| [role.titleize, role] }) %>
-    </div><br />
+    </div><br>
 
     <div class="actions">
       <%= f.submit "Update Info" %>
