updated registration and routes to redirect to user show page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -38,6 +38,7 @@
   <p><strong>Your Zipcode: </strong><%= @user.zipcode %></p>
   <p><strong>Your email: </strong><%= @user.email %></p>
   <p><strong>Your Current Rating: <strong><%= @rating %></strong></p>
+  <p><strong>Your Current Rating: <strong><%= @rating %></strong></p>
 </div>
 
 <hr>
