added params to devise registration controller to save user

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,6 +3,7 @@
     <%= error_message if @user.errors.full_messages.first == error_message %> <br />
   <% end %>
 <% end %>
+<h1><%= current_user %></h1> <!-- tester -->
 
 <% if current_user.mid_clearance? && current_user != @user %>
 
