--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -39,7 +39,6 @@
   <p><strong>Your Zipcode: </strong><%= @user.zipcode %></p>
   <p><strong>Your email: </strong><%= @user.email %></p>
   <p><strong>Your Current Rating: <strong><%= @rating %></strong></p>
-  <p><strong>Your Current Rating: <strong><%= @rating %></strong></p>
 </div>
 
 <hr>
@@ -50,7 +49,7 @@
 
 <p><%= button_to "Edit My Profile", edit_user_path(@user), :method => 'get', :class => 'btn btn-primary' %></p>
 
-<p><%= button_to "Delete My account", registration_path(:user, as: :accounts), :class => 'btn btn-primary', data: { confirm: "Are you sure?" }, method: :delete %></p>
+<p><%= button_to "Delete My Account", registration_path(:user, as: :accounts), :class => 'btn btn-primary', data: { confirm: "Are you sure?" }, method: :delete %></p>
 
 <% end %>
 
