--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
     <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
     <%= link_to "Sign in", new_user_session_path, :class => 'navbar-link'  %> |
     <%= link_to image_tag('fb-favicon.ico'), user_facebook_omniauth_authorize_path, :class => 'navbar-link' %>
-  <% end %>
+  <% end %><br>
   <%= render 'layouts/header' %>
 
     <%= csrf_meta_tags %>
