--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,9 +3,8 @@
     <%= error_message if @user.errors.full_messages.first == error_message %> <br />
   <% end %>
 <% end %>
-<h1><%= current_user %></h1> <!-- tester -->
 
-<% if current_user.mid_clearance? && current_user != @user %>
+<% if current_user.mod_or_admin? && current_user != @user %>
 
 <h1> User's Profile </h1>
 
