updated book validationas, methods in controller

--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,4 +1,4 @@
-<i>All fields but 'title' are optional, but the more fields added, the better the chance of trading a book</i><br /><br />
+<i>All fields but 'title' and 'condition' are optional, but the more fields added, the better the chance of trading a book</i><br /><br />
 
 <%= form_for ([ @user, @book ]) do |f|  %>
   <div class="centerbox">
