--- a/app/views/home/logged_out.html.erb
+++ b/app/views/home/logged_out.html.erb
@@ -1,21 +1,13 @@
 
-<% if current_user %>
-  <h2><%= current_user.first_name %>'s Homepage!</h2>
-  <script type="text/javascript" charset="utf-8">
-  $(function() {
-    $("#profile").on('click', function() {
-      var personId = this.getAttribute('data-id');
-      alert(personId);
-    })
-  })
-  </script>
-<% else %>
+
+
+
   <div class="page-header">
 
     <h1>Welcome to libbylibby! <small> Libbylibby is a site for listing and trading books.  Simply add some books, complete your shipping info, and browse the site to find books you like.  If you like a book, suggest a trade; others can then trade for a book from your list or reject the trade.  If you both agree to trade, ship the selected title to the other person in a timely fashion via USPS media mail --- usually $3 to 5 --- and they'll do the same for you (unless they're bad neighbors!). And if things don't work out --- the book doesn't come, or it's in awful condition, for example --- you can rate the shipper!<br /><hr>Happy reading, happy trading!</small></h1>
   </div> 
   <div class="book-listing">
-  <% if !(@books.empty?) %>  
+  <% if (@books && !(@books.empty?)) %>  
     <h3>Our Most Recent Titles:</h3>
     <% @books.each do |book| %>
      <img src="http://covers.openlibrary.org/b/isbn/<%= book.isbn %>-M.jpg?default=false"  alt="" onerror="this.src='/assets/no-image-s.png'" style="width:43px;height:60px;">
@@ -23,7 +15,7 @@
     <% end %>
   <% end %>
   </div> 
-<% end %> 
+
 
 
 
