--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,15 @@
 <header>
+      <p class="navbar-text pull-right">
+
+  <% if user_signed_in? %>
+    Signed in as <strong><%= current_user.email %></strong> |
+    <%= link_to "Sign out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+  <% else %>
+    <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
+    <%= link_to "Sign in", new_user_session_path, :class => 'navbar-link'  %> |
+    <%= link_to image_tag('fb-favicon.ico'), user_facebook_omniauth_authorize_path, :class => 'navbar-link' %>
+  <% end %><br>
+  
   <% if current_user && current_user.admin? %>
   <nav class="admin_nav">
     <h2>***ADMIN***</h2>
