--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,24 +13,37 @@
         </div>
     </div>
   </div>
-  <p class="navbar-text pull-right">
 
-  <% if user_signed_in? %>
-    Signed in as <strong><%= current_user.email %></strong> |
-    <%= link_to "Sign out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
-  <% else %>
-    <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
-    <%= link_to "Sign in", new_user_session_path, :class => 'navbar-link'  %> |
-    <%= link_to image_tag('fb-favicon.ico'), user_facebook_omniauth_authorize_path, :class => 'navbar-link' %>
-  <% end %><br>
-  <%= render 'layouts/header' %>
 
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <p class="notice"><%= notice %></p>
        <p class="alert"><%= alert %></p>
+         <script type="text/javascript" charset="utf-8">
+  $(function() {
+    $("#profile").on('click', function() {
+      var personId = this.getAttribute('data-id');
+      var url = "http://localhost:3000/users/" + personId + ".json";
+      var html = '<div class="profile"><div class="profile_heading">Profile</div>'
+      $.ajax({
+        dataType: "json",
+        url: url,
+        success: function(data) {
+          for (var key in data) {
+            var value = data[key];
+            html += '<div>' + key + ': ' + value + '</div>'
+          }
+          html += '</div>'
+          $("#myProfile").append(html);
+        }
+      });
+    });
+  });
+  </script>
   </head>
+
+  <%= render 'layouts/header' %>
 
   <body>
     <%= yield %>
