added all_books ajax call and render

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -19,7 +19,7 @@
 
       <img src="http://covers.openlibrary.org/b/isbn/<%= book.isbn %>-M.jpg?default=false"  alt="" onerror="this.src='/assets/no-image-s.png'" style="width:43px;height:60px;">
       <h3><%= book.title %></h3>
-      <p>Author: <%= book.author_last_name %>, <%= book.author_first_name %></p>
+      <p>Author: <%= book.author_first_name %> <%= book.author_last_name %></p>
       <%= link_to "See More", user_book_path(book.user, book) %><br>
 
     <% end %>
