renamed divs and buttons for consistency

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -92,7 +92,10 @@ img[src=""] {
   background-color: Azure;
   border: 10px solid #74cef1; 
   padding: 20px;
-  margin: 20px; 
+  margin-left: 15%;
+  margin-right: 15%;
+  margin-top: 20px;
+  margin-bottom: 20px; 
 }
 
 .boxframe-title {
