added clear function, simplified display div on logged_in view

--- a/app/views/home/logged_in.html.erb
+++ b/app/views/home/logged_in.html.erb
@@ -1,6 +1,10 @@
 <h2><%= current_user.first_name %>'s Homepage!</h2>
 
+
+  <div id="display-area"></div>
+  <!--
   <div id="my-profile"></div>
   <div id="all-books"></div>
   <div id="my-trades"></div>
   <div id="my-books"></div>
+  <div id="one-book"></div> -->
