--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,10 +27,10 @@
 
   <% if current_user %>
   <hr>
-  <input type="image" class="col-xs-12 col-md-3" id="all-books-btn" <%= image_tag "all-books-btn.png" %>>
-  <input type="image" class="col-xs-12 col-md-3" id="my-profile-btn" data-id="<%= current_user.id %>" <%= image_tag "my-profile-btn.png" %>>
-  <input type="image" class="col-xs-12 col-md-3"id="my-books-btn" data-id="<%= current_user.id %>" <%= image_tag "my-books-btn.png" %>>
-  <input type="image" class="col-xs-12 col-md-3"id="my-trades-btn" data-id="<%= current_user.id %>" <%= image_tag "my-trades-btn.png" %>>
+  <input type="image" class="col-xs-12 col-md-3" id="all-books-btn" <%= image_tag "all-books-btn.png" %>
+  <input type="image" class="col-xs-12 col-md-3" id="my-profile-btn" data-id="<%= current_user.id %>" <%= image_tag "my-profile-btn.png" %>
+  <input type="image" class="col-xs-12 col-md-3"id="my-books-btn" data-id="<%= current_user.id %>" <%= image_tag "my-books-btn.png" %>
+  <input type="image" class="col-xs-12 col-md-3"id="my-trades-btn" data-id="<%= current_user.id %>" <%= image_tag "my-trades-btn.png" %>
   
     <nav class="logged_in_nav">
         <ul>
