--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,13 +30,17 @@
     <%= yield %>
   </body>
   <footer>
-    <% if !(current_user.uid) %>
+   
+<% if current_user && !(current_user.uid) %>
 <p><%= button_to "Change My Password", edit_user_registration_path(current_user), :method => 'get', :class => 'btn btn-primary' %></p>
 <% end %>
 
+<% if current_user %>
 <p><%= button_to "Edit My Profile", edit_user_path(current_user), :method => 'get', :class => 'btn btn-primary' %></p>
 
 <p><%= button_to "Delete My Account", registration_path(:user, as: :accounts), :class => 'btn btn-primary', data: { confirm: "Are you sure?" }, method: :delete %></p>
+ <% end %>   
+
     <div class='little-text'>
     </br >
     <hr>
