added handlebars to experiment with templating

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   <div id="banner">
     <div id="wrapper">
         <div id="container">
-                <img class="banner-img-large" <%= image_tag "banner1.png" %> 
+                <input type="image" id="banner-img" class= "col-xs-12 col-md-12" <%= image_tag "banner1.png" %>
         </div>
     </div>
   </div>
