--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -79,7 +79,7 @@ img {
     width: 100%;
     margin: 0 auto;
 }
-.banner-img-large {
+#banner-img {
     max-width: 100%;
     margin: 10px 0 20px 0;
     border-radius: 3px;
