--- a/app/assets/javascripts/templates/myProfileTemplate.hbs
+++ b/app/assets/javascripts/templates/myProfileTemplate.hbs
@@ -5,5 +5,9 @@
   <p><strong>Your State: {{user.state}}</strong></p>
   <p><strong>Your Zipcode: {{user.zipcode}} </strong></p>
   <p><strong>Your Role: {{user.role}} </strong></p>
+  <p><strong>Your Books:</strong></p>
+  {{#user.books}}
+   <p>{{title}}</p>
+  {{/user.books}}
 </div>
 
