updated trades controller

--- a/app/assets/javascripts/templates/myProfileTemplate.hbs
+++ b/app/assets/javascripts/templates/myProfileTemplate.hbs
@@ -5,7 +5,7 @@
   <p><strong>Your State: {{user.state}}</strong></p>
   <p><strong>Your Zipcode: {{user.zipcode}} </strong></p>
   <p><strong>Your Role: {{user.role}} </strong></p>
-  <p><strong>Your Books:</strong></p>
+  <p><strong>Your Books: (This can be removed later, just an experiment)</strong></p>
   {{#user.books}}
    <p>{{title}}</p>
   {{/user.books}}
