--- a/app/assets/javascripts/templates/myProfileTemplate.hbs
+++ b/app/assets/javascripts/templates/myProfileTemplate.hbs
@@ -9,5 +9,6 @@
   {{#user.books}}
    <p>{{title}}</p>
   {{/user.books}}
+  <button type="button" class="btn btn-primary" id="edit-profile">Edit My Profile</button>
 </div>
 
