updated mapped js events with corresponding handlebar templating

--- a/app/assets/javascripts/templates/editMyProfileTemplate.hbs
+++ b/app/assets/javascripts/templates/editMyProfileTemplate.hbs
@@ -37,10 +37,9 @@
         </option>
       </select>
     </div><br>
-    <div class="actions">
-      <input data-disable-with="Update Info" name="commit" type="submit" value="Update Info">
-    </div>
-  </form>
+
+      <button type="button" class="btn btn-primary" data-id={{user.id}} id="edit-profile">Edit My Profile</button>
+
   </div>
 
  
