--- a/app/assets/javascripts/templates/showMyBookTemplate.hbs
+++ b/app/assets/javascripts/templates/showMyBookTemplate.hbs
@@ -3,7 +3,7 @@
 
 <h3 class='boxframe-title'>Title: {{book.title}}</h3>  
 <p class='boxframe-subj'>Author: </p>
-<p class='boxframe-desc'>{{book.author_first_name}} {{book.author_last_name}}</p>
+<p class='boxframe-desc'>{{book.authorFullName}}</p>
 <p class='boxframe-subj'>Genre(s):</p>
 
 <p class='boxframe-subj'> ISBN: </p>
@@ -12,5 +12,6 @@
 <p class='boxframe-desc'>{{book.condition}}</p>
 <p class='boxframe-subj'>Description:</p>
 <p class='boxframe-desc'>{{book.description}}</p>
-Put edit, delete button here 
+<p>Add edit, delete button here</p>
 </div>
+<hr>
