tweaked books controller, template stylin

--- a/app/assets/javascripts/templates/myBooksTemplate.hbs
+++ b/app/assets/javascripts/templates/myBooksTemplate.hbs
@@ -25,3 +25,13 @@
     <% end %>
   <% end %>
 <% end %>
+
+{{#books}}
+<div class="boxframe">
+<img src="http://covers.openlibrary.org/b/isbn/{{isbn}}-M.jpg?default=false"  alt="" onerror="this.src='/assets/no-image-s.png'" style="width:43px;height:60px;">
+<h3>Title: {{title}}</h3>
+<p>Author: {{author_first_name}} {{author_last_name}}</p></br>
+<button type='button' class='btn btn-primary btn-xs show-book-btn' data-value1='{{user.id}}' data-value2='{{id}}'>Click for More</button>
+</div>
+{{/books}} 
+<button type='button' class='btn btn-primary btn-xs load-more-books-btn'>Load More Books</button>
