refined routing in books controller

--- a/app/assets/javascripts/templates/showBookTemplate.hbs
+++ b/app/assets/javascripts/templates/showBookTemplate.hbs
@@ -12,7 +12,7 @@
 <p class='boxframe-desc'>{{book.condition}}</p>
 <p class='boxframe-subj'>Description:</p>
 <p class='boxframe-desc'>{{book.description}}</p>
-  <button type="button" class="btn btn-primary" data-user={{user_id}} id="trade-request-btn">Edit My Profile</button>
+  <button type="button" class="btn btn-primary btn-xs" data-user={{book.user_id}} data-book={{book.id}} id="trade-request-btn">Suggest a Trade</button>
 </div>
 <hr>
   
